--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "studatlas-core",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "studatlas backend",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/flaviocopes/testing.git"
+  },
+  "bugs": "https://github.com/flaviocopes/package/issues",
+  "author": {
+    "name": "Vitaly Pereslavtsev",
+    "email": "dev@pereslavtsev.com",
+    "url": "https://pereslavtsev.com"
+  },
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
@@ -21,10 +30,17 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
-    "@nestjs/platform-express": "^6.0.0", 
+    "@nestjs/graphql": "^6.5.1",
+    "@nestjs/platform-express": "^6.0.0",
+    "apollo-server-express": "^2.9.3",
+    "graphql": "^14.5.6",
+    "graphql-tools": "^4.0.5",
+    "iconv": "^2.3.4",
+    "node-html-parser": "^1.1.16",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "safe-buffer": "^5.2.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
@@ -43,7 +59,11 @@
     "typescript": "3.4.3"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".spec.ts$",
     "transform": {
