--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@nestjs/graphql": "^6.5.1",
     "@nestjs/platform-express": "^6.0.0",
     "apollo-server-express": "^2.9.3",
+    "cheerio": "^1.0.0-rc.3",
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
     "iconv": "^2.3.4",
-    "node-html-parser": "^1.1.16",
+    "query-string": "^6.8.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/cheerio": "^0.22.13",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
