--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
     "iconv": "^2.3.4",
+    "nestjs-config": "^1.4.4",
     "query-string": "^6.8.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
