--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@nestjs/platform-express": "^6.0.0",
     "apollo-server-express": "^2.9.3",
     "cheerio": "^1.0.0-rc.3",
+    "csurf": "^1.10.0",
+    "express-rate-limit": "^5.0.0",
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
+    "helmet": "^3.21.1",
     "iconv": "^2.3.4",
     "nestjs-config": "^1.4.4",
     "query-string": "^6.8.3",
