--- a/package.json
+++ b/package.json
@@ -31,14 +31,12 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/graphql": "^6.5.1",
-    "@nestjs/platform-express": "^6.0.0",
-    "apollo-server-express": "^2.9.3",
+    "@nestjs/platform-fastify": "^6.7.2",
+    "apollo-server-fastify": "^2.9.4",
     "cheerio": "^1.0.0-rc.3",
-    "csurf": "^1.10.0",
-    "express-rate-limit": "^5.0.0",
+    "dotenv": "^8.1.0",
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
-    "helmet": "^3.21.1",
     "iconv": "^2.3.4",
     "nestjs-config": "^1.4.4",
     "query-string": "^6.8.3",
@@ -50,6 +48,7 @@
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/cheerio": "^0.22.13",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
