--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "studatlas backend",
   "repository": {
     "type": "git",
-    "url": "https://github.com/flaviocopes/testing.git"
+    "url": "git@github.com:vsuet/studatlas-core.git"
   },
-  "bugs": "https://github.com/flaviocopes/package/issues",
+  "bugs": "https://github.com/vsuet/studatlas-core/issues",
   "author": {
     "name": "Vitaly Pereslavtsev",
     "email": "dev@pereslavtsev.com",
@@ -31,6 +31,7 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/graphql": "^6.5.1",
+    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-fastify": "^6.7.2",
     "apollo-server-fastify": "^2.9.4",
     "cheerio": "^1.0.0-rc.3",
@@ -38,6 +39,7 @@
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
     "iconv": "^2.3.4",
+    "mongoose": "^5.7.1",
     "nestjs-config": "^1.4.4",
     "query-string": "^6.8.3",
     "reflect-metadata": "^0.1.12",
