--- a/package.json
+++ b/package.json
@@ -32,15 +32,20 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/graphql": "^6.5.1",
     "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-fastify": "^6.7.2",
     "apollo-server-fastify": "^2.9.4",
+    "auth0": "^2.20.0",
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
     "iconv": "^2.3.4",
+    "jwks-rsa": "^1.6.0",
     "mongoose": "^5.7.1",
     "nestjs-config": "^1.4.4",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "query-string": "^6.8.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
@@ -49,11 +54,12 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/auth0": "^2.9.21",
     "@types/cheerio": "^0.22.13",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
+    "@types/passport-jwt": "^3.0.2",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
     "prettier": "1.17.0",
