--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "studatlas backend",
   "repository": {
     "type": "git",
-    "url": "git@github.com:vsuet/studatlas-core.git"
+    "url": "git@github.com:pereslavtsev/studatlas-core.git"
   },
-  "bugs": "https://github.com/vsuet/studatlas-core/issues",
+  "bugs": "https://github.com/pereslavtsev/studatlas-core/issues",
   "author": {
     "name": "Vitaly Pereslavtsev",
     "email": "dev@pereslavtsev.com",
@@ -28,9 +28,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.2",
     "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.0.0",
+    "@nestjs/core": "^6.8.3",
     "@nestjs/graphql": "^6.5.1",
+    "@nestjs/microservices": "^6.8.3",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-fastify": "^6.7.2",
@@ -40,6 +42,7 @@
     "dotenv": "^8.1.0",
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
+    "grpc": "^1.24.0",
     "iconv": "^2.3.4",
     "jwks-rsa": "^1.6.0",
     "mongoose": "^5.7.1",
