--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "rimraf dist && tsc -p tsconfig.build.json",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
-    "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
@@ -28,12 +29,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@grpc/proto-loader": "^0.5.2",
+    "@grpc/proto-loader": "^0.5.3",
+    "@nestjs/cli": "^6.12.1",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.8.3",
     "@nestjs/graphql": "^6.5.1",
-    "@nestjs/microservices": "^6.8.3",
-    "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/microservices": "^6.10.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-fastify": "^6.7.2",
     "apollo-server-fastify": "^2.9.4",
@@ -45,7 +46,6 @@
     "grpc": "^1.24.0",
     "iconv": "^2.3.4",
     "jwks-rsa": "^1.6.0",
-    "mongoose": "^5.7.1",
     "nestjs-config": "^1.4.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
