- no unused deps

--- a/package.json
+++ b/package.json
@@ -39,26 +39,21 @@
     "@nestjs/platform-fastify": "^6.7.2",
     "apollo-server-fastify": "^2.9.4",
     "auth0": "^2.20.0",
-    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.1.0",
     "graphql": "^14.5.6",
     "graphql-tools": "^4.0.5",
     "grpc": "^1.24.0",
-    "iconv": "^2.3.4",
     "jwks-rsa": "^1.6.0",
     "nestjs-config": "^1.4.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "query-string": "^6.8.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3",
-    "safe-buffer": "^5.2.0"
+    "rxjs": "^6.3.3"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/auth0": "^2.9.21",
-    "@types/cheerio": "^0.22.13",
     "@types/dotenv": "^6.1.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
