--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.5.3",
     "@nestjs/cli": "^6.12.1",
-    "@nestjs/common": "^6.0.0",
-    "@nestjs/core": "^6.8.3",
-    "@nestjs/graphql": "^6.5.1",
+    "@nestjs/common": "^6.10.1",
+    "@nestjs/core": "^6.10.1",
+    "@nestjs/graphql": "^6.5.3",
     "@nestjs/microservices": "^6.10.1",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-fastify": "^6.7.2",
@@ -41,6 +41,7 @@
     "auth0": "^2.20.0",
     "dotenv": "^8.1.0",
     "graphql": "^14.5.6",
+    "graphql-tag-pluck": "^0.8.7",
     "graphql-tools": "^4.0.5",
     "grpc": "^1.24.0",
     "jwks-rsa": "^1.6.0",
@@ -60,14 +61,14 @@
     "@types/passport-jwt": "^3.0.2",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
-    "prettier": "1.17.0",
+    "prettier": "^1.19.1",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
     "ts-node": "8.1.0",
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
     "tslint": "5.16.0",
-    "typescript": "3.5"
+    "typescript": "3.6.4"
   },
   "jest": {
     "moduleFileExtensions": [
