--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,12 @@ jobs:
           cache_from: '$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:latest'
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
       - docker/push:
-          digest-path: /tmp/digest.txt
+          #digest-path: /tmp/digest.txt
           image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
           tag: latest
-      - run:
-          command: |
-            echo "Digest is: $(</tmp/digest.txt)"
+#      - run:
+#          command: |
+#            echo "Digest is: $(</tmp/digest.txt)"
 
 # workflows
 workflows:
